# Morolo

./: .env.example  .gitignore  END_TO_END_TEST_RESULTS.md  README.md  create_classifications.py  docker-compose-postgres.yml  docker-compose.yml  init-morolo-db.sh  pyproject.toml  requirements.txt  sample_document.txt  setup.sh
.kiro/specs/morolo/: .config.kiro  DAY1-2_REVIEW.md  HACKATHON_EXECUTION_PLAN.md  IMPROVEMENTS_SUMMARY.md  POLICY_INTEGRATION.md  POLICY_REVIEW_FINDINGS.md  design.md  requirements.md  tasks.md
backend/: Dockerfile  __init__.py  alembic.ini  main.py  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_file_hash_unique_constraint.py
backend/api/: __init__.py  auth.py  file_validation.py  middleware.py  schemas.py
backend/api/routes/: audit.py  health.py  redact.py  risk.py  status.py  upload.py
backend/core/: __init__.py  config.py  database.py  storage.py  types.py
backend/models/: db_models.py
backend/services/: document_processor.py  indian_id_provider.py  indian_id_recognizer.py  metadata_parser.py  om_integration.py  pii_detector.py  redaction_engine.py
backend/tasks/: audit.py  celery_app.py  om_tasks.py  processing_tasks.py
backend/tests/: __init__.py  conftest.py
backend/tests/fixtures/: sample_document_job.json  sample_pii_entities.json  sample_redaction_metadata.json
backend/tests/unit/: test_metadata_parser.py  test_pii_detector.py  test_redaction_engine.py
docker/: init-db.sql
docs/samples/: generate_samples.py
frontend/: Dockerfile  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/.next/: trace
frontend/app/: layout.tsx  page.tsx  providers.tsx
frontend/lib/: api.ts  queries.ts  store.ts
frontend/types/: api.ts
mcp-server/: README.md  server.py  test_mcp.py
(+69 files in other folders)
